# action-provider-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  DEVELOPMENT.rst  Makefile  README.rst  RELEASING.md  WORKFLOW.md  actions_spec.openapi.yaml  index.html  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yaml  ci.yml  has_changelog.yaml  release.yml  test.yaml
changelog.d/: 20211207_162847_uriel_use_scriv.rst  20211209_160927_jimPruyne_mishandled_refresh_token_missing_on_dependent_grant.rst  20211210_180115_uriel_more_auth_logging.rst  20211216_103517_kurtmckee_doc_git_workflow_sc_12069.rst  20220111_115427_uriel_return_func_on_route_decorators.rst  20220202_114438_rudyardrichter_sdk_v3_upgrade.rst  20220525_100444_kurtmckee_pyjwt_2_4_0.rst  20220622_111959_kurtmckee_fix_bad_version.rst  20220706_162836_kurtmckee_lxml_4_9_1.rst  20221021_111510_kurtmckee_fix_test_suite_sc_19578.rst  20221021_112258_kurtmckee_fix_test_suite_sc_19578.rst  20221021_115640_kurtmckee_fix_test_suite_sc_19578.rst  20221021_131441_kurtmckee_fix_test_suite_sc_19578.rst  20221025_155232_kurtmckee_fix_test_suite_sc_19578.rst  20221025_161711_kurtmckee_fix_test_suite_sc_19578.rst  20221026_140243_kurtmckee_fix_typeerror_crash_sc_19671.rst  20221026_165824_kurtmckee_address_invalid_grant_error_sc_19538.rst  20221028_090333_kurtmckee_fix_test_suite_sc_19668.rst  20221201_195520_sirosen_update_jsonschema_req.rst  20221216_151552_kurtmckee_rm_dummy_auth_call.rst  20221216_222633_sirosen_remove_module_deprecation_warning.rst  20230118_134635_kurtmckee_build_a_wheel_once.rst  20230718_103000_sirosen_update_dependencies.rst  20231003_071121_kurtmckee.rst  20231013_094529_derek_cloudwatch_emf_middleware_sc_26163.rst  20231013_094529_derek_cloudwatch_emf_request_lifecycle_hooks_sc_26163.rst  20231211_124332_ada_fix_groups_membership_check_bug.rst  20240123_134319_ada_fix_error_description_field_behavior.rst  20240314_103819_kurtmckee_resolve_base_issues.rst  20240314_171321_kurtmckee_document_dependency_management.rst  20240319_114453_kurtmckee_prevent_type_error_sc_30842.rst  20240322_160607_kurtmckee_support_cors_sc_18726.rst  20240328_165035_kurtmckee_skip_checking_bogus_tokens_sc_30786.rst  20240329_091032_kurtmckee_skip_checking_bogus_tokens_sc_30786.rst  20240329_112034_kurtmckee_skip_checking_bogus_tokens_sc_30786.rst  20240529_100816_kurtmckee_rm_base62.rst  20240530_142800_derek_allow_disabling_of_validation_error_obscuring.rst  20240607_153946_kurtmckee_eliminate_none_return_type.rst  20241003_114654_sirosen_infra_cleanup.rst  20241007_162811_sirosen_rename_tokenchecker.rst  (+20 more)
docs/: requirements.txt
docs/source/: action_provider_interface.rst  actions_spec.openapi.yaml  caching.md  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  license.rst  setting_up_auth.rst  swagger-yaml-to-html.py  toolkit.rst
docs/source/_static/css/: termynal.css
docs/source/_static/js/: termynal.js
docs/source/cli/: example.html  example_action_request.html  example_action_run.html  export_credentials.html  introspect_client.html  query_scope_uuid.html
docs/source/examples/: apt_blueprint.rst  input_schemas.rst  watchasay.rst  whattimeisitrightnow.rst
docs/source/toolkit/: authentication.rst  caching.rst  data_types.rst  flask_helpers.rst  testing.rst  validation.rst
examples/apt_blueprint/: README.rst  app.py  backend.py  blueprint.py  requirements.txt
examples/apt_blueprint/tests/: test_action_provider.py
examples/watchasay/: README.rst  requirements.txt  test_watchasay.py
examples/watchasay/app/: config.py  provider.py  schema.json
examples/watchasay/tests/: test_action_provider.py
examples/whattimeisitrightnow/: README.rst  requirements.txt
examples/whattimeisitrightnow/app/: app.py  config.py  database.py  error.py  schema.json
examples/whattimeisitrightnow/tests/: test_action_provider.py
globus_action_provider_tools/: __init__.py  action_request.yaml  actions_spec.openapi.yaml  authentication.py  authorization.py  caching.py  data_types.py  errors.py  exceptions.py  flows_spec.openapi.yaml  groups_client.py  storage.py  utils.py  validation.py
globus_action_provider_tools/flask/: __init__.py  api_helpers.py  apt_blueprint.py  config.py  exceptions.py  helpers.py  types.py
globus_action_provider_tools/flask/middleware/: cloudwatch_metrics.py
globus_action_provider_tools/flask/request_lifecycle_hooks/: cloudwatch_metrics.py
globus_action_provider_tools/testing/: fixtures.py  mocks.py  patches.py
requirements/docs/: pyproject.toml  requirements.txt
requirements/mypy/: pyproject.toml  requirements.txt
requirements/test/: pyproject.toml  requirements.txt
src/globus_action_provider_tools/: __init__.py  action_status.yaml  authentication.py  authorization.py  client_factory.py  data_types.py  storage.py  utils.py
src/globus_action_provider_tools/flask/: __init__.py  api_helpers.py  apt_blueprint.py  config.py  exceptions.py  helpers.py  types.py
src/globus_action_provider_tools/flask/request_lifecycle_hooks/: __init__.py  cloudwatch_metrics.py
src/globus_action_provider_tools/testing/: patches.py
tests/: conftest.py  test_authentication.py  test_authorization.py  test_data_types.py  test_exceptions.py  test_groups_client.py  test_meta.py  test_mocks.py  test_tokenchecker.py  test_validation.py  utils.py
tests/api-fixtures/: groups-my_groups.yaml  token-introspect.yaml  token.yaml
tests/data/: canned_responses.py
tests/flask/: ap_client.py  app_utils.py  conftest.py  test_api_errors.py  test_flask_auth_state_builder.py  test_query_helpers.py  test_routes.py
tests/flask/request_lifecycle_hooks/: test_cloudwatch_metrics.py
tests/test_flask_helpers/: ap_client.py  app_utils.py  conftest.py  test_api_errors.py  test_blueprint.py  test_common_helpers.py  test_helpers.py  test_query_helpers.py  test_routes.py  test_validation_helpers.py
tests/test_flask_helpers/middleware/: test_cloudwatch_metrics.py
tests/test_flask_helpers/request_lifecycle_hooks/: test_cloudwatch_metrics.py
